fixed horizontal scroll behaviour

--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ body {
   flex-flow: column wrap;
   float: left;
   height: 100%;
+  width: 85%;
+  overflow-x: scroll;
 }
 
 .post.grid.item {
@@ -89,6 +91,8 @@ body {
     height: auto;
     display: flex;
     flex-flow: row wrap;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   .post.grid.container {
